--- a/LoanQuoter/LoanQuoter.csproj
+++ b/LoanQuoter/LoanQuoter.csproj
@@ -49,10 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSVParser\CsvReader.cs" />
+    <Compile Include="DTO\MonthlyQuote.cs" />
     <Compile Include="DTO\Quote.cs" />
     <Compile Include="Exceptions\CsvParserException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quoter\InterestCalculator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
