--- a/LoanQuoterTest/LoanQuoterTest.csproj
+++ b/LoanQuoterTest/LoanQuoterTest.csproj
@@ -58,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvReaderTests.cs" />
+    <Compile Include="MonthlyQuoteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
