--- a/LoanQuoterTest/packages.config
+++ b/LoanQuoterTest/packages.config
@@ -4,5 +4,8 @@
   <package id="FluentAssertions" version="4.19.4" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net461" />
+  <package id="NLog" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Config" version="4.4.12" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.4.12" targetFramework="net461" />
   <package id="NUnit" version="3.8.1" targetFramework="net461" />
 </packages>
