--- a/LoanQuoterTest/NLog.config
+++ b/LoanQuoterTest/NLog.config
@@ -4,7 +4,7 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="false"
-      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+      internalLogLevel="Off" internalLogFile="c:\nlog-internal.log">
 
   <!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
@@ -27,7 +27,11 @@
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
+            
     -->
+    
+    <target name="console" xsi:type="ColoredConsole" layout="${message} ${exception:format=message}" />
+
   </targets>
 
   <rules>
@@ -37,5 +41,6 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
+    <logger name="*" minlevel="Debug" writeTo="console" />
   </rules>
 </nlog>
