Added Calculator test

--- a/LoanQuoterTest/LoanQuoterTest.csproj
+++ b/LoanQuoterTest/LoanQuoterTest.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CsvReaderTests.cs" />
+    <Compile Include="InterestCalculatorTests.cs" />
     <Compile Include="MonthlyQuoteTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
