--- a/LoanQuoterTest/LoanQuoterTest.csproj
+++ b/LoanQuoterTest/LoanQuoterTest.csproj
@@ -69,6 +69,7 @@
     <Content Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="App.config" />
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
